sites/all/themes/rebound/sass/_responsive.scss
/* ... */
@media screen and (max-width:480px)
{
    .view-events .view-header
    {
        text-align: center;
        
        .button
        {
            float: none;
            margin-bottom: 20px;
        }
    }
    body.page-events
    {
        .page-title
        {
            float: none;
        }
    }
    
    body.front #block-block-12>.content>div
    {
        width: 280px;
        height: 280px;
        padding: 20px;
        margin-top: -160px;
        margin-left: -160px;
        font-size: 1.8em;
    }
    
    #gmap
    {
        height: 320px;
    }
    
    body.calendar
    {
        .main-wrapper>div>div,
        .main-wrapper #block-system-main
        {
            padding-left: 0;
            padding-right: 0;
        }
    }
}



@media screen and (max-width:350px)
{
    .footer
    {
        .address,
        .phone,
        .email,
        .donate
        {
            width: 120px;
        }
        .social
        {
            left: 15px;
        }
        .logo img
        {
            width: 115px;
            height: auto;
        }
        .logos a
        {
            margin: 0 2px;
        }
    }
    
    body.i-am-rebound
    {
        .page-wrapper .page-title h1,
        .view-i-am-rebound .views-field-title h2
        {
            font-size: 2.25em;
        }
    }
    
    .view-primary-circles,
    .view-secondary-circles,
    {
        .views-row
        {
            float: none !important;
        }
    }
}


@media screen and (max-width: 360px) and (max-height: 560px)
{
    .navigation
    {
        height: 80px;
        
        .logo
        {
            height: 80px;
            
            &:after
            {
                border-width: 40px 0 40px 33px;
            }
            
            img
            {
                height: 60px;
                width: auto;
            }
        }
        
        .region-navigation
        {
            top: 80px;
        }
        
        .btn-menu
        {
            height: 80px;
        }
    }
    body.not-front .page-wrapper
    {
        padding-top: 80px;
    }
    #block-system-main-menu .content ul a
    {
        height: 48px;
    }
    .navigation .social
    {
        height: 200px;
        padding-top: 8px;
    }
}
@media screen and (max-width: 360px) and (max-height: 450px)
{
    #block-system-main-menu .content ul a
    {
        height: 36px;
        font-size: 1em;
    }
    .navigation .social
    {
        padding-top: 5px;
        
        .content a
        {
            width: 30px;
            height: 30px;
        }
    }
}

